WIP: fix EntityMapper & EntityMapperTest issue #27